<resources>
    <string name="app_name">Lets-Travel</string>
    <string name="favorite">Favorite</string>
    <string name="language">Language</string>
    <string name="location">Location</string>
    <string name="popular_places">Popular Places</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="setting">Setting</string>
    <string name="English">English</string>
    <string name="Khmer">ភាសាខ្មែរ</string>
    <string name="ratingUs">Rating Us</string>
    <string name="comment_optional">Comment (Optional)</string>
    <string name="Submit">Submit</string>
    <string name="PlaceName">Place name</string>
    <string name="PlaceLocation">Place Location</string>
    <string name="AddDocument">Add Document (Optional)</string>
    <string name="PlaceSuggestion">Help us to fine a good place to visit in Cambodia</string>
    <string name="WriteReview">Write a review</string>
    <string name="activities">Activities</string>
    <string name="about_us">About app</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_nearby_map">Map</string>
    <string name="title_activity_near_by">Map</string>
    <string name="title_activity_detail_province">detail_province</string>
    <string name="action_settings">Settings</string>
    <string name="misison">Are u exciting with exploring a new place in Cambodia? Then this app is suit for you. We
        build this application for people who seek to explore new place and learn more experience about trip.This app
        provide a place detail , activity , location that make user to know about their destination place more clearly
        and well prepare.
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
