<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group >
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/home" />
        <item
                android:id="@+id/nav_favorite"
                android:icon="@drawable/ic_favorite"
                android:title="@string/favorite" />
        <item
                android:id="@+id/nav_nearby"
                android:icon="@drawable/ic_location"
                android:title="Near by" />
        <item
                android:id="@+id/nav_language"
                android:icon="@drawable/ic_language"
                android:title="@string/language" />
        <item
                android:id="@+id/nav_rating"
                android:icon="@drawable/ic_rating"
                android:title="@string/ratingUs" />

        <item
                android:id="@+id/nav_add_place"
                android:icon="@drawable/ic_add_place"
                android:title="Add new place" />
        <item
                android:id="@+id/nav_aboutus"
                android:icon="@drawable/ic_about"
                android:title="@string/about_us" />
    </group>
</menu>