<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".ui.add_new_place_fragment.BlankFragment">

<android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <TextView
            android:text="@string/PlaceSuggestion"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            android:layout_marginBottom="684dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.089"
            app:layout_constraintVertical_bias="0.067"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:hint="@string/PlaceName"
            android:id="@+id/editText2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView12" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintVertical_bias="0.052"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:hint="@string/PlaceLocation"
            android:id="@+id/editText3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:padding="8dp"
            android:text="@string/AddDocument"
            android:background="@color/colorOrange"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText3"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.106"
            app:layout_constraintVertical_bias="0.055"/>
    <TextView
            android:text="Document.pdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button2"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText3"
            app:layout_constraintHorizontal_bias="0.26"
            app:layout_constraintVertical_bias="0.067"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="12dp"/>
</android.support.constraint.ConstraintLayout>

</FrameLayout>